WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285037
AX: We should not cache AXPropertyName::AttributedText or AXPropertyName::TextContent with ENABLE(AX_THREAD_TEXT_APIS)
https://bugs.webkit.org/show_bug.cgi?id=285037
Summary
AX: We should not cache AXPropertyName::AttributedText or AXPropertyName::Tex...
Tyler Wilcock
Reported
2024-12-20 11:38:15 PST
Instead, we should synthesize these properties on the fly using our cached text runs (AXPropertyName::TextRuns).
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-20 11:38:25 PST
<
rdar://problem/141834535
>
Tyler Wilcock
Comment 2
2024-12-20 11:41:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38279
EWS
Comment 3
2024-12-20 16:58:13 PST
Committed
288200@main
(df5b37e39bf0): <
https://commits.webkit.org/288200@main
> Reviewed commits have been landed. Closing PR #38279 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug