AX: We should not cache AXPropertyName::AttributedText or AXPropertyName::TextContent with ENABLE(AX_THREAD_TEXT_APIS) https://bugs.webkit.org/show_bug.cgi?id=285037 rdar://141834535

Reviewed by Chris Fleizach.

Instead, we should synthesize these properties on the fly using our cached text runs (AXPropertyName::TextRuns).

* Source/WebCore/accessibility/AXLogger.cpp:
(WebCore::operator<<):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.h:
* Source/WebCore/accessibility/isolatedtree/mac/AXIsolatedObjectMac.mm:
(WebCore::AXIsolatedObject::initializePlatformProperties):
(WebCore::AXIsolatedObject::textContent const):
(WebCore::AXIsolatedObject::textMarkerRange const):
(WebCore::AXIsolatedObject::platformStringValue const):
(WebCore::AXIsolatedObject::textLength const):
(WebCore::AXIsolatedObject::attributedStringForTextMarkerRange const):
* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(attributedStringForTextMarkerRange):

Canonical link: https://commits.webkit.org/288200@main